# wyoming-stt-api

./: README.md  pyproject.toml
wyoming_stt_api/: cli.py  dependencies.py  settings.py
wyoming_stt_api/clients/: ats.py
wyoming_stt_api/services/: wyoming.py
