[project]
name = "wyoming-stt-api"
version = "2.0.0"
description = "Wyoming server running speech-to-text with API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.10.1",
    "wyoming>=1.7.2",
    "requests"
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.10",
]

[tool.ruff]
lint.extend-select = ["I"]

[tool.mypy]
plugins = ["pydantic.mypy"]
